# grafana-dashboards-builder

./: .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
builder/: builder.py
tests/: test_arguments.py  test_builder.py  test_click_args.py  test_generating_dashboards.py  test_loading_dashboards.py
