[tool.poetry]
name = "grafana-dashboards-builder"
version = "0.1.0"
description = "Grafana Dashboards Builder"
authors = ["Grzegorz Dlugoszewski <g.dlugoszewski@gmail.com>"]

packages = [
    { include = "builder" }
]

[tool.poetry.dependencies]
python = "^3.6"
grafanalib = "^0.5.5"
click = "^7.1.1"

# Build with console script entry point (ie. as an executable)
# Run build() function from builder package from builder module as an entry point
[tool.poetry.scripts]
grafana-dashboards-builder = "builder.builder:build"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
autopep8 = "^1.5.1"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
